crates/solidity/testing/snapshots/bindings_output/contracts/storage_layout_inner_constant/generated/v1/0.4.11-failure.txt
# This file is generated automatically by infrastructure scripts. Please don't edit by hand.

Parse errors:
Error: Expected IsKeyword or OpenBrace.
   ╭─[input.sol:1:12]
   │
 1 │ ╭─▶ contract X2 layout at C2 { // should not bind to a constant defined in the contract
   ┆ ┆   
 3 │ ├─▶ }
   │ │       
   │ ╰─────── Error occurred here.
───╯
References and definitions: 
   ╭─[input.sol:1:1]
   │
 1 │ contract X2 layout at C2 { // should not bind to a constant defined in the contract
   │          ─┬  
   │           ╰── name: 1
───╯
Definiens: 
   ╭─[input.sol:1:1]
   │
 1 │ contract X2 layout at C2 { // should not bind to a constant defined in the contract
   │ ─────┬─────  
   │      ╰─────── definiens: 1
───╯
